objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Acceptance_of_terms_and_conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acceptance of terms and conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_BDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned BDM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads_as_BDM_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_CSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned CSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads_as_CSM_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deadline_for_contact__c</fullName>
        <formula>Now()+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deadline for contact</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_referring_page__c</fullName>
        <label>Last referring page</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_referred_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead referred by</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Negotum_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Negotum Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Network_Member_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is responsible for following up with the lead</inlineHelpText>
        <label>Network Member Responsible</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Network_Member</value>
            </filterItems>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ENSi_Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Network Member Responsible)</relationshipLabel>
        <relationshipName>Leads_Responsibility_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Participants__c</fullName>
        <label>Number of Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_from_lead__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Admin only</inlineHelpText>
        <label>Opportunity from lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_record_type__c</fullName>
        <inlineHelpText>Select the type of Opportunity this will become</inlineHelpText>
        <label>Opportunity record type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Opp_Record_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_type__c</fullName>
        <label>Opportunity type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Opportunity_record_type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Opportunity_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pardot_Rating__c</fullName>
        <formula>IMAGE(
IF(pi__score__c&lt;1, &quot;/img/samples/stars_000.gif&quot;,
IF(pi__score__c&lt;50, &quot;/img/samples/stars_100.gif&quot;,
IF(pi__score__c&lt;100, &quot;/img/samples/stars_200.gif&quot;,
IF(pi__score__c&lt;150, &quot;/img/samples/stars_300.gif&quot;,
IF(pi__score__c&lt;200, &quot;/img/samples/stars_400.gif&quot;, &quot;/img/samples/stars_500.gif&quot;
))))),
&quot;Rating&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pardot Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Opportunity (for OC PAX only)</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Parent can only be of type OC Course OR OC Course Profit Split</errorMessage>
            <filterItems>
                <field>Opportunity.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>OC_Course</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>OC_Course_profit_split</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred_primary_language__c</fullName>
        <label>Preferred primary language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_type__c</fullName>
        <label>Product type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open Course</fullName>
                </value>
                <value>
                    <fullName>In-house training</fullName>
                </value>
                <value>
                    <fullName>Negotiation Consulting</fullName>
                </value>
                <value>
                    <fullName>Organisational transformation</fullName>
                </value>
                <value>
                    <fullName>Interested in joining ENS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promo_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promo Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_lead_source__c</fullName>
        <inlineHelpText>If the lead comes through via phone please ask them what led them to call us and note it here</inlineHelpText>
        <label>Secondary lead source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Secondary_lead_source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <label>Sub-Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sub_Industry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_City__c</fullName>
        <inlineHelpText>Enter the City that the training is going to be conducted in</inlineHelpText>
        <label>Training City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Country__c</fullName>
        <inlineHelpText>Select the Country that the training will be conducted in</inlineHelpText>
        <label>Training Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Listing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Preferred_Finish__c</fullName>
        <inlineHelpText>Enter the finish date for when the customer would like the training</inlineHelpText>
        <label>Training Preferred Finish</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Preferred_Start__c</fullName>
        <inlineHelpText>Enter the start date for when the customer would like the training</inlineHelpText>
        <label>Training Preferred Start</label>
        <type>Date</type>
    </fields>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>OC_PAX_must_have_parent</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
TEXT(Opportunity_record_type__c) = &quot;OC PAX&quot;,
ISBLANK(Parent_Opportunity__c),
TEXT(Status) = &quot;Converted&quot;
)</errorConditionFormula>
        <errorDisplayField>Parent_Opportunity__c</errorDisplayField>
        <errorMessage>To create an OC PAX Opportunity you must define a parent.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Parent_only_for_OC_PAX</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
TEXT(Opportunity_record_type__c) &lt;&gt; &quot;OC PAX&quot;,
ISBLANK(Parent_Opportunity__c) = False
)</errorConditionFormula>
        <errorDisplayField>Parent_Opportunity__c</errorDisplayField>
        <errorMessage>You cannot define a parent for an Opportunity that isn&apos;t an OC PAX. Please empty this field, or change the Opportunity record type.</errorMessage>
    </validationRules>
</CustomObject>